fix: 컨테이너 overflow시 스크롤 처리 + 스크롤 CSS 전역 스타일로 사용하도록 index.css로 이동

--- a/client/src/components/study/SettingSideBar/SettingSideBar.module.css
+++ b/client/src/components/study/SettingSideBar/SettingSideBar.module.css
@@ -55,10 +55,12 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  min-height: 0;
 }
 
 .rule > div {
   flex-grow: 1;
+  overflow: auto;
 }
 
 /* .bgm_field {
