--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,3 +23,14 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid transparent;
+  border-radius: 100px;
+  background-color: rgba(52, 58, 64, 0.5);
+  background-clip: padding-box;
+}
